Adding java reccomended changes